added the edit and delete user functions Created a sep page for delete user, have to login again to delete the account

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -24,8 +24,14 @@
     </style>
 </head>
 <body>
-<!-- Main Body of Page -->
 
+<!--errors-->
+<div class="col-12 m-1 text-center"
+     th:if="${!errors.isEmpty()}">
+    <p class="alert alert-danger" th:each="error : ${errors}"
+       th:text="${error.message}">Error message</p>
+</div>
+<!-- Main Body of Page -->
 <div class="container">
     <div class="row m-2">
 
@@ -56,100 +62,94 @@
 </div>
 
 
-<!--user details-->
-<!--<div class="container">-->
-<!--    <div class="row m-2">-->
+<!--user details + edit -->
+<div class="container">
+    <div class="row m-2">
+        <div class="col text-center m-3" style="text-align: left;">   <!--  col-[number] says the column location -->
+            <span class="h2">User Details</span>
 
+            <div class="text-center m-3" style="text-align: left;">
+                <!--            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site-->
+                <form action="editUserDetails" method="POST">
+                    <div class="form-group row">
+                        <label for="newEmail" class="col-3 col-form-label">
+                            Email</label>
+                        <div class="col-9">
+                            <input type="text" name="newEmail"
+                                   id="newEmail" placeholder="Email" class="form-control" th:value="${currentUser.email}" required/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="newFirstName" class="col-3 col-form-label">
+                            First Name</label>
+                        <div class="col-9">
+                            <input type="text" name="newFirstName"
+                                   id="newFirstName" placeholder="First Name" class="form-control" th:value="${currentUser.userFirstName}" required/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="newLastName" class="col-3 col-form-label">
+                            Last Name</label>
+                        <div class="col-9">
+                            <input type="text" name="newLastName"
+                                   id="newLastName" placeholder="Last Name" class="form-control" th:value="${currentUser.userLastName}" required/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="addedPremium" class="col-3 col-form-label">
+                            Premium</label>
+                        <div class="col-6">
+                            <input type="checkbox" id="addedPremium" name="addedPremium" value="true"/><br/>
+                            <!--                    <input type="text" name="addedPremium"-->
+                            <!--                           id="addedPremium" placeholder="Username"  class="form-control"/>-->
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary ">Edit Details</button>
+                    <a href="deleteUser" class="btn btn-primary">Delete Account</a>
 
-<!--        <div class="col text-center " style="text-align: left;">-->
-<!--            <h2>Account Details</h2>-->
-<!--            <div class="col text-center" style="text-align: left;">&nbsp;</div>-->
+                </form>
+            </div>
+        </div>
+        <hr/>
+        <div class="container">
+            <div class="row m-2">
+                <div class="col text-center m-3" style="text-align: left;">   <!--  col-[number] says the column location -->
+                    <span class="h2">Change Password</span>
 
-<!--            <dl>-->
-<!--                <dt>Username</dt>-->
-<!--                <dd class="col text-center"><span th:text="${user.username}">username</span></dd>-->
+                    <div class="text-center m-3" style="text-align: left;">
+                        <!--            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site-->
+                        <form action="editUserPassword" method="POST">
+                            <div class="form-group row">
+                                <label for="newPassword1" class="col-3 col-form-label">
+                                    New Password</label>
+                                <div class="col-9">
+                                    <input type="password" name="newPassword1"
+                                           id="newPassword1" placeholder="Password" class="form-control"  required/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="newPassword2" class="col-3 col-form-label">
+                                    Retype New Password</label>
+                                <div class="col-9">
+                                    <input type="password" name="newPassword2"
+                                           id="newPassword2" placeholder="Password" class="form-control"  required/>
+                                </div>
+                            </div>
 
-<!--                <dt>First Name</dt>-->
-<!--                <dd class=" col text-center"><span th:text="${user.userFirstName}">userFirstName</span></dd>-->
-
-<!--                <dt>Last Name</dt>-->
-<!--                <dd class="col text-center"><span th:text="${user.userLastName}">userLastName</span></dd>-->
-
-<!--                <dt>Email</dt>-->
-<!--                <dd class="col text-center"><span th:text="${user.email}">email</span></dd>-->
-<!--            </dl>-->
-<!--            <a href="logoff" class="btn btn-primary">Logoff</a>-->
-<!--        </div>-->
-
-
-
-
-
-<!--        <div class="col text-center" style="text-align: center;">-->
-<!--            <h2>Edit</h2>-->
-
-
-<!--&lt;!&ndash;edit account &ndash;&gt;-->
-
-<!--            <div class="text-center m-3" >-->
-<!--                &lt;!&ndash;            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site&ndash;&gt;-->
-<!--                <form action="editUser" method="POST">-->
-<!--                    <div class="form-group row">-->
-<!--                        <label for="editPassword" class="col-3 col-form-label">-->
-<!--                            Password</label>-->
-<!--                        <div class="col-9">-->
-<!--                            <input type="password" name="editPassword"-->
-<!--                                   id="editPassword" placeholder="Edit Password" class="form-control"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="form-group row">-->
-<!--                        <label for="editEmail" class="col-3 col-form-label">-->
-<!--                            Email</label>-->
-<!--                        <div class="col-9">-->
-<!--                            <input type="text" name="editEmail"-->
-<!--                                   id="editEmail" placeholder="Edit Email"  class="form-control"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="form-group row">-->
-<!--                        <label for="editFirstName" class="col-3 col-form-label">-->
-<!--                            First Name</label>-->
-<!--                        <div class="col-9">-->
-<!--                            <input type="text" name="editFirstName"-->
-<!--                                   id="editFirstName" placeholder="Edit First Name"  class="form-control"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="form-group row">-->
-<!--                        <label for="editLastName" class="col-3 col-form-label">-->
-<!--                            Last Name</label>-->
-<!--                        <div class="col-9">-->
-<!--                            <input type="text" name="editLastName"-->
-<!--                                   id="editLastName" placeholder="Edit Last Name"  class="form-control"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="form-group row">-->
-<!--                        <label for="editPremium" class="col-3 col-form-label">-->
-<!--                            Premium</label>-->
-<!--                        <div class="col-6">-->
-<!--                            <input type="checkbox" id="editPremium" name="editPremium" value="true"/><br/>-->
-<!--                            &lt;!&ndash;                    <input type="text" name="addedPremium"&ndash;&gt;-->
-<!--                            &lt;!&ndash;                           id="addedPremium" placeholder="Username"  class="form-control"/>&ndash;&gt;-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <button type="submit" class="btn btn-primary ">Edit Account</button>-->
-<!--                    <a href="deleteUser" class="btn btn-primary">Delete Account</a>-->
-<!--                </form>-->
-<!--            </div>-->
+                            <button type="submit" class="btn btn-primary ">Change Password</button>
+                        </form>
+                    </div>
+                </div>
 
 
 
 
+            </div>
 
+        </div>
 
-
-<!--        </div>-->
-
-<!--    </div>-->
-<!--</div>-->
+    </div>
+</div>
 
 <!-- End main body -->
 
